# float-binstring

./: LICENSE  README.markdown  bench.hs  changelog  conv.c  float-binstring.cabal
Data/Float/: BinString.hs  Test.hs
Data/Float/BinString/: Test.hs
tests/: Test.hs  gentest.c  tests.pairs.10k
