name:                float-binstring
version:             0.1
synopsis:            format and parse doubles as C99 printf/scanf with format %a do
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anton Nikishaev <me@lelf.lu>
maintainer:          Anton Nikishaev <me@lelf.lu>
copyright:           2013 Anton Nikishaev
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Float.BinString
  other-extensions:    Safe, TupleSections
  build-depends:       base < 5, split >= 0.2, parsec >= 3.1
  default-language:    Haskell2010

test-suite tests
  type:		       exitcode-stdio-1.0
  main-is:	       Test.hs
  build-depends:       QuickCheck >=2.6
